plugins {
    id 'idea'
    id 'org.springframework.boot' version '2.7.18' apply false
    id 'io.spring.dependency-management' version '1.1.4'
}

allprojects {
    group = 'com.technokratos.agona'
    version = '1.0-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

ext {
    jwtVersion       = '0.11.5'
    liquibaseVersion = '4.17.2'
    mapstructVersion = '1.6.3'
    minioVersion     = '8.6.0'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:2.7.18"
        }
    }
}